Alignment issues

--- a/style/style.css
+++ b/style/style.css
@@ -40,12 +40,10 @@ body {
 }
 
 .row-distribution {
-  text-align: center;
   display: flex;
+  float: left;
   flex-direction: row;
   justify-content: space-between;
-  vertical-align: middle;
-  align-items: center;
 }
 
 .column-distribution {
@@ -79,10 +77,12 @@ body {
 
 #showTemp {
   font-size: 75px;
+  float: left;
 }
 
 #showDesc {
   font-size: 30px;
+  display: block;
   text-transform: capitalize;
 }
 
@@ -161,19 +161,11 @@ body {
   padding: 0.2em 1.2em;
   text-decoration: none;
   color: white;
-}
-
-@media screen and (min-width: 600px) {
-  .upstate-logo-left {
-    .upstate-logo-small {
-      display: none
-    }
-    ;
-    .upstate-logo-left {
-      display: none
-    }
-    ;
-  }
+  display: flex;
+  float: left;
+  align-items: center;
+  justify-content: center;
+  /*vertical-align: middle;*/
 }
 
 .upstate-logo-small {
@@ -183,9 +175,10 @@ body {
   display: none;
 }
 
-.upstate-weather {
+.weather-info {
   font-size: 20px;
   margin: 0;
+  float: left;
 }
 
 .weather-row {
@@ -207,6 +200,7 @@ body {
 
 .showWeatherIcon {
   text-align: center;
+  display: block;
 }
 
 .buttonRow {
@@ -216,10 +210,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-
-#wicon {
-  width: 150px;
 }
 
 .rightColumnHoriz {
